<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="T_BST_Traversal" Id="{f85b0e8e-2b73-4764-b31b-e6f74cb63e23}">
    <Declaration><![CDATA[TYPE T_BST_Traversal : E_BINARY_SEARCH_TREE_TRAVERSAL; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>