<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="T_Comparison" Id="{03324480-04e3-4aff-8a14-60232a97c46e}">
    <Declaration><![CDATA[TYPE T_Comparison : E_COMPARISON; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>