<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_AVL_NODE" Id="{2cca6320-29e6-45a7-b0e7-d68a2bb66d05}">
    <Declaration><![CDATA[// Node for AVL Tree.
{attribute 'enable_dynamic_creation'}
TYPE ST_AVL_NODE:
STRUCT
	Data 		: T_Generic; // Stored data.
	Height 		: T_Position; // Height of the node.
	pParent 	: POINTER TO ST_AVL_NODE; 	// Pointer to parent node.
	pLeft 		: POINTER TO ST_AVL_NODE; 	// Pointer to left node.
	pRight 		: POINTER TO ST_AVL_NODE; 	// Pointer to right node.
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>